<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/linearLayout_menu"
        android:layout_width="490px"
        android:layout_height="match_parent"
        android:background="@drawable/menu_back"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/label"
            android:layout_width="wrap_content"
            android:layout_height="116px"
            android:src="@drawable/label"
            android:layout_marginLeft="@dimen/side_margin"
            android:layout_marginTop="@dimen/top_margin_small" />

        <TextView
            android:id="@+id/label_header"
            style="@style/TextHeaderStyle.Light"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/side_margin_average"
            android:layout_marginTop="@dimen/top_margin_small"
            android:text="@string/label"/>

        <View
            android:layout_width="490px"
            android:layout_height="1dp"
            android:layout_marginTop="@dimen/top_margin_average"
            android:background="@color/light_font_grey" />

        <TextView
            android:id="@+id/menu_main"
            style="@style/TextMenuStyle"
            android:layout_marginTop="@dimen/top_margin_average"
            android:background="@color/menu_selected_grey"
            android:text="@string/main"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:id="@+id/menu_riadovoi"
            style="@style/TextMenuStyle"
            android:text="@string/prokat_riadovoi"/>

        <TextView
            android:id="@+id/menu_konstrukcionnyi"
            style="@style/TextMenuStyle"
            android:text="@string/prokat_konstrukchionnyi"/>

        <TextView
            android:id="@+id/kvadratnaia"
            style="@style/TextMenuStyle"
            android:text="@string/kvadratnaia_zagotovka"/>

        <TextView
            android:id="@+id/katanka"
            style="@style/TextMenuStyle"
            android:text="@string/katanka"/>

        <View
            android:layout_width="490px"
            android:layout_height="1dp"
            android:layout_marginTop="@dimen/top_margin_average"
            android:background="@color/light_font_grey" />

        <TextView
            android:id="@+id/about"
            style="@style/TextMenuStyle"
            android:text="@string/about"/>

        <TextView
            android:id="@+id/certificate"
            style="@style/TextMenuStyle"
            android:text="@string/certificates"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/contact_bar"
        android:layout_width="1430px"
        android:layout_height="124px"
        android:orientation="horizontal"
        android:background="@color/blue_dark"
        app:layout_constraintStart_toEndOf="@id/linearLayout_menu"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/telephone"
            style="@style/TextContactStyle"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="28px"
            android:text="@string/telephone_number" />

        <TextView
            android:id="@+id/email"
            style="@style/TextContactStyle"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="48px"

            android:text="@string/email" />

        <TextView
            android:id="@+id/web"
            style="@style/TextContactStyle"
            android:layout_marginLeft="48px"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/web" />

        <TextView
            android:id="@+id/address"
            style="@style/TextContactStyle"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:singleLine="false"
            android:layout_marginLeft="48px"
            android:text="@string/address" />

    </LinearLayout>

    <TextView
        android:id="@+id/header"
        style="@style/TextHeaderStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/side_margin"
        android:layout_marginTop="@dimen/top_margin_average"
        android:text="@string/our_prodaction"
        app:layout_constraintTop_toBottomOf="@id/contact_bar"
        app:layout_constraintStart_toEndOf="@id/linearLayout_menu"/>

    <TextView
        android:id="@+id/body"
        style="@style/TextBodyStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/side_margin"
        android:layout_marginRight="@dimen/side_margin"
        android:layout_marginTop="@dimen/top_margin_small"
        android:text="@string/main_body"
        android:maxWidth="1318px"
        app:layout_constraintTop_toBottomOf="@id/header"
        app:layout_constraintStart_toEndOf="@id/linearLayout_menu"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/body2"
        style="@style/TextBodyStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/side_margin"
        android:layout_marginRight="@dimen/side_margin"
        android:layout_marginTop="8px"
        android:text="@string/main_body2"
        android:maxWidth="1318px"
        app:layout_constraintTop_toBottomOf="@id/body"
        app:layout_constraintStart_toEndOf="@id/linearLayout_menu"
        app:layout_constraintEnd_toEndOf="parent"/>


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_all_products"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
            app:spanCount="3"
            tools:listitem="@layout/item_card"
            app:layout_constraintStart_toEndOf="@id/linearLayout_menu"
            app:layout_constraintTop_toBottomOf="@id/body2"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginStart="@dimen/side_margin"
            android:layout_marginTop="@dimen/top_margin_average"
            android:layout_marginBottom="@dimen/top_margin_average"/>



</androidx.constraintlayout.widget.ConstraintLayout>